Fix cutoff on ul

--- a/app/style/_base.scss
+++ b/app/style/_base.scss
@@ -38,6 +38,10 @@ a {
   }
 }
 
+ul {
+  padding-left: 1px;
+}
+
 h1 { font-size: 20vw; }
 h2 { font-size: 15vw; }
 h3 { font-size: 10vw; }
